  makes it possible to have utf-8 cookies.  This is a part where
  the Python 3 version will later change in that it will always
  operate on latin1 values.
- Fixed a bug in the form parser that caused the last character to
  be dropped off if certain values in multipart data is used.
- Multipart parser now looks at the part-individual content type
  header to override the global charset.

Version 0.6.2
-------------
(bugfix release, released on April 23th 2010)

- renamed the attribute `implicit_seqence_conversion` attribute of the
  request object to `implicit_sequence_conversion`.

Version 0.6.1
-------------
(bugfix release, released on April 13th 2010)

- heavily improved local objects.  Should pick up standalone greenlet
  builds now and support proxies to free callables as well.  There is
  also a stacked local now that makes it possible to invoke the same
  application from within itself by pushing current request/response
  on top of the stack.
- routing build method will also build non-default method rules properly
  if no method is provided.
- added proper IPv6 support for the builtin server.
- windows specific filesystem session store fixes.
  (should no be more stable under high concurrency)
- fixed a `NameError` in the session system.
- fixed a bug with empty arguments in the werkzeug.script system.
- fixed a bug where log lines will be duplicated if an application uses
  :meth:`logging.basicConfig` (#499)
- added secure password hashing and checking functions.
- `HEAD` is now implicitly added as method in the routing system if
  `GET` is present.  Not doing that was considered a bug because often
  code assumed that this is the case and in web servers that do not
  normalize `HEAD` to `GET` this could break `HEAD` requests.
- the script support can start SSL servers now.

Version 0.6
-----------
(codename Hammer, released on Feb 19th 2010)

- removed pending deprecations
- sys.path is now printed from the testapp.